--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,10 @@ FetchContent_Declare(
   GIT_TAG 0.9.9.8)
 FetchContent_MakeAvailable(glm)
 
+include(FindVulkan)
+
 add_executable(sbash64-learn-vulkan-main main.cpp)
-target_link_libraries(sbash64-learn-vulkan-main glfw glm vulkan)
+target_link_libraries(sbash64-learn-vulkan-main glfw glm Vulkan::Vulkan)
 target_compile_features(sbash64-learn-vulkan-main PRIVATE cxx_std_20)
 target_compile_options(sbash64-learn-vulkan-main
                        PRIVATE "${SBASH64_LEARN_VULKAN_WARNINGS}")
