--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ FetchContent_MakeAvailable(glm)
 
 include(FindVulkan)
 
-add_executable(sbash64-learn-vulkan-main main.cpp vulkan-wrappers.cpp)
+add_executable(sbash64-learn-vulkan-main main.cpp vulkan-wrappers.cpp
+                                         glfw-wrappers.cpp)
 target_link_libraries(sbash64-learn-vulkan-main glfw Vulkan::Vulkan glm)
 target_include_directories(sbash64-learn-vulkan-main PRIVATE include)
 target_compile_features(sbash64-learn-vulkan-main PRIVATE cxx_std_20)
