--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ include(FindVulkan)
 
 add_executable(
   sbash64-learn-vulkan-main main.cpp vulkan-wrappers.cpp glfw-wrappers.cpp
-                            stbi-wrappers.cpp load-object.cpp)
+                            stbi-wrappers.cpp load-object.cpp load-scene.cpp)
 target_link_libraries(sbash64-learn-vulkan-main glfw Vulkan::Vulkan glm
                       tinyobjloader)
 target_include_directories(
